# Cortex

./: .gitignore  Cargo.toml  Current Task  LICENSE  README.md  package.json  todo.txt
CLI/cortex/: Cargo.toml  notes.txt  status
CLI/cortex/src/: lib.rs  main.rs
CLI/cortex/src/cli/: main.rs
CLI/cortex/src/server/: main.rs
Design Docs/: Brainstorm.md  Chord.md
Extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  cortex-1.0.2.vsix  extension.js  package-lock.json  package.json
Server/: package-lock.json  server.js
cortex/: Cargo.toml
cortex/src/: bootstrap.rs  chord.rs  cnp.rs  dispatch.rs  lib.rs  main.rs  messaging.rs
cortex/src/messaging/: listener.rs  net.rs  stream.rs
src/: lib.rs
src/cli/: main.rs
src/host/: main.rs
src/server/: host.rs  main.rs
test_resources/db/: docker-compose.yaml  seed.js
