[package]
name = "cortex"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive", "string"] }
cuckoofilter = "0.5.0"
futures = "0.3.30"
lazy_static = "1.5.0"
mongodb = "3.0.1"
nanoid = "0.4.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio =  {version = "1.39.3", features = ["full"]}


[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
